# sign-tool

./: .gitignore  AGENTS.md  README.md  config.toml.example  install.sh  nginx-sign-tool.conf  pyproject.toml  sign-tool.service  uninstall.sh  update.sh
sign_tool/: auth.py  cli.py  config.py  db.py  log.py  runner.py  scheduler.py
sign_tool/kuro/: api.py  constants.py  login.py  sign.py
sign_tool/notify/: notify.py  serverchan.py  telegram.py
sign_tool/tajiduo/: api.py  constants.py  laohu.py  login.py  sign.py
sign_tool/web/: app.py
sign_tool/web/routes/: admin.py  auth.py  user.py
sign_tool/web/static/: index.html
